fix: corrigindo acesso a aplicação e import de batch